--- a/feedback.css
+++ b/feedback.css
@@ -1,27 +1,61 @@
-*{
+@font-face {
+    font-family: 'GrandParadiso-Regular';
+    src: url('fonts/GrandParadiso-Regular.woff') format('truetype');
+}
+@font-face {
+    font-family: 'jodie-garland-jodie-garland-regular-400';
+    src: url('fonts/jodie-garland-jodie-garland-regular-400.ttf') format('truetype');
+    
+}
+* {
     margin: 0;
-    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 header{
+    font-size: 100%;
     background-color: darkgray;
-    padding-bottom: 100px;
 }
 
-header h1{
-    padding-top: 60px;
-    text-align: center;
-    padding-bottom: 60px;
+header img {
+    max-height: 80px;
 }
 
-.menu{
+.cabecalho {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 24px;
+ }
+
+.cabecalho-menu {
+    display: flex;
+    gap: 32px; }
+
+
+header nav a{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    color: white;
+    background-color:#6e6e6e;
+    width: 180px;
+    height: 48px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.parte1 nav a{
-    margin-left: 250px;
-    text-decoration: none;
-    color: darkblue;
+main{
+        background-color: darkgray;
+        margin-bottom: 48px;
+        border-top: 0.4px solid #2c2a2a;
 }
 
 .parte1 h3{
