--- a/contatos.css
+++ b/contatos.css
@@ -14,6 +14,16 @@
     text-decoration: none;
 }
 
+body {
+    
+    background: 
+    url('imagens/patternbackground.png') repeat-y,
+     #8d8c8c;
+     background-size: 1350px;
+     background-position: top;
+     
+}
+
 header{
     font-size: 100%;
     background-color: darkgray;
@@ -53,7 +63,7 @@ header nav a{
 }
 
 main{
-        background-color: darkgray;
+    
         margin-bottom: 48px;
         border-top: 0.4px solid #2c2a2a;
 }
@@ -69,9 +79,7 @@ main{
     color: darkblue;
 }
 
-main{
-    background-color: darkgray;
-}
+
 
 .whatsapp{
     display: flex;
@@ -111,5 +119,4 @@ main{
 
 footer{
     padding: 60px;
-    background-color: aqua;
 }
