--- a/principal.css
+++ b/principal.css
@@ -6,6 +6,7 @@
     font-family: 'jodie-garland-jodie-garland-regular-400';
     src: url('fonts/jodie-garland-jodie-garland-regular-400.ttf') format('truetype');
     
+  
 }
 * {
     margin: 0;
@@ -13,6 +14,17 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+
+body {
+    
+background: 
+url('imagens/patternbackground.png') repeat-y,
+ #8d8c8c;
+ background-size: 1350px;
+ background-position: top;
+ 
+}
+
 
 header{
     font-size: 100%;
@@ -53,7 +65,6 @@ header nav a{
 }
 
 main{
-    background-color: darkgray;
     margin-bottom: 48px;
     border-top: 0.4px solid #2c2a2a;
 }
@@ -145,9 +156,21 @@ main{
     font-weight: 400;
     font-size: 35px;
 }
+h2{ display: flex;
+    justify-content: center;
+    font-family: "jodie-garland-jodie-garland-regular-400", sans-serif;
+    font-weight: 400;
+    font-size: 50px;
+    color: white;   
+}
 
 footer{
-    background-color: aqua;
+    font-family: "GrandParadiso-Regular", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    margin-bottom: 48px;
+    border-top: 0.4px solid #2c2a2a;
     padding: 60px;
     display: flex;
+    align-items: center;
 }
