--- a/servicos.css
+++ b/servicos.css
@@ -14,6 +14,15 @@
     text-decoration: none;
 }
 
+body {
+    
+    background: 
+    url('imagens/patternbackground.png') repeat-y,
+     #8d8c8c;
+     background-size: 1350px;
+     background-position: top;
+     
+}
 header{
     font-size: 100%;
     background-color: darkgray;
@@ -53,21 +62,21 @@ header nav a{
 }
 
 main{
-        background-color: darkgray;
-        margin-bottom: 48px;
-        border-top: 0.4px solid #2c2a2a;
+    margin-bottom: 48px;
+    border-top: 0.4px solid #2c2a2a;
 }
-.cabecalho{
+.inicio-servicos{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 24px;
-    gap: 5px;
-    padding-bottom: 5px;
+    justify-content:space-around;
+    padding: 40px;
+    gap: 40px;
+    
 }
 
 .imagem-elemento{
+    padding-top: 50px;
     max-width: 100%;
     max-height: 500px;
   
@@ -75,11 +84,16 @@ main{
 
 .imagem-utensilios{
     max-width: 100%;
-    max-height: 300px;
-    margin-top: 60px
+    max-height: 400px;
+    align-self: flex-end
 }
 
+.titulo {
+    padding-top: 90px;
+} 
+
 h1 {
+   
     display: flex;
     flex-direction: column;
     margin-left: 40px;
@@ -87,6 +101,7 @@ h1 {
     font-weight: 400;
     font-size: 100px;
     color: white;
+
 }
 
 .servicos{
@@ -136,7 +151,5 @@ h1 {
     object-fit: cover;
 }
 
-footer{
-    background-color: aqua;
-    padding: 60px;
+footer{  padding: 60px;
 }
