--- a/feedback.css
+++ b/feedback.css
@@ -78,3 +78,45 @@ main{
     text-decoration: none;
     color: darkblue;
 }
+
+.Feedback .Titulo-Feedback h1{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    background-color: #2c2a2a;
+    border-radius: 10px;
+    margin-left: 600px;
+    margin-right: 600px;
+}
+
+.Feedback .Imagem-Feedback img{
+    width: 255px;
+    height: 215px;
+    border-radius: 50%;
+    margin-top: 90px;
+    margin-left: 100px;
+    display: flex;
+}
+
+.Feedback .Imagem-Feedback p{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    margin-top: 130px;
+    margin-left: 10px;
+    font-size: 24px;
+}
+
+.Bloco_1 {
+    display: flex;
+}
+
+.Bloco_2 {
+    display: flex;
+}
+
+.Bloco_3 {
+    display: flex;
+}
+
