--- a/principal.css
+++ b/principal.css
@@ -163,8 +163,107 @@ h2{ display: flex;
     font-size: 50px;
     color: white;   
 }
-
 footer{
+    width: 100%;
+    color: white;
+}
+
+#footer_content{
+    background-color: black;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    padding: 3rem 3.5rem
+}
+#footer_contatos h1{
+    margin-bottom: 0.75rem;
+}
+#footer_rede_social{
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+}
+
+#footer_rede_social .footer-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: aliceblue;
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+#footer_rede_social .footer-link i{
+    font-size: 1.25rem;
+}
+#footer_rede_social .footer-link:hover{
+    opacity: 0.8;
+}
+#whatsapp{
+    background-color:#25d366;
+}
+#instagram{
+    background: linear-gradient(#4B0082,#ff2992,#FF8C00)
+}
+#facebook{
+    background-color: #4267b3;
+}
+#footer_enviar{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+    gap: 1.5rem;
+}
+#input_group{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    background-color: #2c2a2a;
+    border-radius: 4px;
+}
+#input_group input{
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+#input_group button{
+    background-color: rgb(5, 57, 199);
+    border: none;
+    color: aliceblue;
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover{
+    opacity: 0.8;
+}
+#footer_copyright{
+    display: flex;
+    justify-content: center;
+    color: black;
+    background-color: darkgray;
+    font-size: 0.9rem;
+    padding: 0.25rem;
+    font-weight: 100
+}
+/* #footer_mapa {
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+  #footer_mapa iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  } */
+/* footer{
     font-family: "GrandParadiso-Regular", sans-serif;
     font-weight: 400;
     font-size: 40px;
@@ -173,4 +272,4 @@ footer{
     padding: 60px;
     display: flex;
     align-items: center;
-}
+} */
