--- a/principal.css
+++ b/principal.css
@@ -171,11 +171,12 @@ footer{
 #footer_content{
     background-color: black;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    gap: 0.5rem;
+    grid-template-columns: repeat(3,1fr);
     padding: 3rem 3.5rem
 }
 #footer_contatos h1{
-    margin-bottom: 0.75rem;
+    margin-bottom: 2rem;
 }
 #footer_rede_social{
     display: flex;
@@ -252,18 +253,20 @@ footer{
     font-weight: 100
 }
 
-/* #footer_mapa {
-    width: 25px;
-    height: 25px;
-    text-align: center;
-    border-radius: 4px;
+#footer_mapa {
+    width: 100%;            /* ou algo fixo como 300px */
+    max-width: 300px;       /* controle o tamanho máximo */
+    height: 200px;          /* altura desejada */
+    margin: 0 auto;
     overflow: hidden;
+    border-radius: 4px;
+    box-sizing: border-box;
   }
-  #footer_mapa iframe {
+#footer_mapa iframe {
     width: 100%;
     height: 100%;
     border: 0;
-  } */
+  }
 /* footer{
     font-family: "GrandParadiso-Regular", sans-serif;
     font-weight: 400;
