--- a/principal.css
+++ b/principal.css
@@ -27,12 +27,16 @@ url('imagens/patternbackground.png') repeat-y,
 
 
 header{
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
     font-size: 100%;
     background-color: darkgray;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 header img {
-    max-height: 80px;
+    height: 80px;
 }
 
 .cabecalho {
@@ -40,7 +44,7 @@ header img {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 24px;
+    padding: 16px;
  }
 
 .cabecalho-menu {
@@ -65,6 +69,7 @@ header nav a{
 }
 
 main{
+    padding-top: 115px;
     margin-bottom: 48px;
     border-top: 0.4px solid #2c2a2a;
 }
