--- a/servicos.css
+++ b/servicos.css
@@ -24,8 +24,12 @@ body {
      
 }
 header{
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
     font-size: 100%;
     background-color: darkgray;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 header img {
@@ -37,7 +41,7 @@ header img {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    padding: 24px;
+    padding: 16px;
  }
 
 .cabecalho-menu {
@@ -63,9 +67,249 @@ header nav a{
 }
 
 main{
+    padding-top: 115px;
     margin-bottom: 48px;
     border-top: 0.4px solid #2c2a2a;
 }
+
+.inicio-servicos {
+    position: relative;
+    width: 100%;
+    height: 560px;
+    overflow: hidden;
+}
+
+.Imagem-fundo img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.imagem-elemento {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    z-index: 1;
+    width: 150px; 
+}
+
+.imagem-utensilios {
+    position: absolute;
+    top: 150px;
+    right: 80px;
+    z-index: 1;
+    width: 300px;
+    height: 300px;
+}
+
+.titulo {
+    position: absolute;
+    top: 150px;
+    transform: translateX(100%);
+    color: white;
+    text-align: center;
+    z-index: 2;
+}
+
+.titulo h1 {
+    font-family: "jodie-garland-jodie-garland-regular-400", sans-serif;
+    font-weight: 400;
+    font-size: 100px;
+}
+
+.servicos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 60px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    position: relative;
+}
+
+.corte_cabelo{
+    position: relative;
+    width: 350px;
+    height: 500px;
+}
+
+.corte_barba{
+    position: relative;
+    width: 350px;
+    height: 500px;
+}
+
+.quimicas{
+    position: relative;
+    width: 350px;
+    height: 500px;
+}
+
+.servicos .corte_cabelo .logo_white {
+    position: absolute;
+    height: 125px;
+    margin-left: 125px;
+    width: 100px;
+    z-index: 1;
+}
+
+.servicos .corte_cabelo .pattern{
+    position: absolute;
+    margin-left: 100px;
+    height: 500px;
+    width: 350px;
+    border-radius: 20px;
+    z-index: 0;
+}
+
+.servicos .corte_cabelo h1{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 280px;
+    font-size: 40px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .corte_cabelo p{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 310px;
+    font-size: 35px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .corte_cabelo button{
+    position: absolute;
+    z-index: 2;
+    font-size: 25px;
+    border-radius: 25px;
+    background-color: rgb(220, 220, 220);
+    padding: 16px 32px;
+    margin-left: 125px;
+    margin-top: 380px;
+}
+
+.servicos .corte_cabelo button:hover{
+    background-color: #2c2a2a;
+    color: white;
+}
+
+.servicos .corte_barba .logo_white {
+    position: absolute;
+    height: 125px;
+    margin-left: 125px;
+    width: 100px;
+    z-index: 1;
+}
+
+.servicos .corte_barba .pattern{
+    position: absolute;
+    margin-left: 100px;
+    height: 500px;
+    width: 350px;
+    border-radius: 20px;
+    z-index: 0;
+}
+
+.servicos .corte_barba h1{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 280px;
+    font-size: 40px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .corte_barba p{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 310px;
+    font-size: 35px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .corte_barba button{
+    position: absolute;
+    z-index: 2;
+    font-size: 25px;
+    border-radius: 25px;
+    background-color: rgb(220, 220, 220);
+    padding: 16px 32px;
+    margin-left: 125px;
+    margin-top: 380px;
+}
+
+.servicos .corte_barba button:hover{
+    background-color: #2c2a2a;
+    color: white;
+}
+
+.servicos .quimicas .logo_white {
+    position: absolute;
+    height: 125px;
+    margin-left: 125px;
+    width: 100px;
+    z-index: 1;
+}
+
+.servicos .quimicas .pattern{
+    position: absolute;
+    margin-left: 100px;
+    height: 500px;
+    width: 350px;
+    border-radius: 20px;
+    z-index: 0;
+}
+
+.servicos .quimicas h1{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 280px;
+    font-size: 40px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .quimicas p{
+    font-family: "GrandParadiso-Regular", sans-serif;
+    color: white;
+    margin-left: 125px;
+    margin-top: 310px;
+    font-size: 35px;
+    position: absolute;
+    z-index: 2;
+}
+
+.servicos .quimicas button{
+    position: absolute;
+    z-index: 2;
+    font-size: 25px;
+    border-radius: 25px;
+    background-color: rgb(220, 220, 220);
+    padding: 16px 32px;
+    margin-left: 125px;
+    margin-top: 380px;
+}
+
+.servicos .quimicas button:hover{
+    background-color: #2c2a2a;
+    color: white;
+}
+
+/* Parte do Athus
 .inicio-servicos{
     display: flex;
     flex-direction: row;
@@ -74,25 +318,38 @@ main{
     padding: 40px;
     gap: 40px;
     
-}
+}*/
 
+
+/*
+.inicio-servicos .Imagem-fundo img{
+    width: 100%;
+    height: 100%;
+    display: inline block;
+    position: relative;
+}*/
+
+/*
 .imagem-elemento{
     padding-top: 50px;
     max-width: 100%;
     max-height: 500px;
   
-}
+}*/
 
+/*
 .imagem-utensilios{
     max-width: 100%;
     max-height: 400px;
     align-self: flex-end
-}
+}*/
 
+/*
 .titulo {
     padding-top: 90px;
-} 
+}*/
 
+/*
 h1 {
    
     display: flex;
@@ -103,37 +360,39 @@ h1 {
     font-size: 100px;
     color: white;
 
-}
+}*/
 
+/*
 .servicos{
     display: flex;
     flex-direction: row;
-    align-items: flex-start; /* alinha topo da imagem com topo do texto */
+    align-items: flex-start; 
     justify-content: space-between;
-    padding: 40px; /* adiciona espaço interno nas bordas */
-    gap: 40px; /* espaço entre imagem e texto */
+    padding: 40px; 
+    gap: 40px; 
     max-width: 1200px;
-    margin: 0 auto; /* centraliza no meio da tela */
+    margin: 0 auto; 
 }
+
 
 .corteCabelo img{
     max-width: 100%;
     max-height: 400px;
-    border-radius: 10px; /* opcional: deixa a imagem com cantos arredondados */
+    border-radius: 10px; 
     object-fit: cover;
 }
 
 .corteCabelo p{
     max-width: 100%;
     max-height: 400px;
-    border-radius: 10px; /* opcional: deixa a imagem com cantos arredondados */
+    border-radius: 10px; 
     object-fit: cover;
 }
 
 .corteBarba img{
     max-width: 100%;
     max-height: 400px;
-    border-radius: 10px; /* opcional: deixa a imagem com cantos arredondados */
+    border-radius: 10px;
     object-fit: cover;
 }
 
@@ -144,13 +403,14 @@ h1 {
 
 .video video{
     display: flex;
-    margin: 0 auto; /* centraliza no meio da tela */
+    margin: 0 auto; 
     max-width: 1200px;
     max-width: 100%;
     max-height: 400px;
-    border-radius: 10px; /* opcional: deixa a imagem com cantos arredondados */
+    border-radius: 10px; 
     object-fit: cover;
 }
+*/
 
 footer{
     width: 100%;
