--- a/feedback.css
+++ b/feedback.css
@@ -344,6 +344,25 @@ footer{
     height: 100%;
     border: 0;
   }
+  .voltar-topo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: rgb(100, 100, 100);
+    color: white;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  .voltar-topo:hover {
+    background-color: black;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
 /* footer{
     font-family: "GrandParadiso-Regular", sans-serif;
     font-weight: 400;
