--- a/principal.css
+++ b/principal.css
@@ -291,6 +291,9 @@ footer{
     height: 100%;
     border: 0;
   }
+  html {
+    scroll-behavior: smooth;
+  }
 /* footer{
     font-family: "GrandParadiso-Regular", sans-serif;
     font-weight: 400;
