--- a/principal.css
+++ b/principal.css
@@ -294,6 +294,37 @@ footer{
   html {
     scroll-behavior: smooth;
   }
+  @media screen and (max-width: 768px) {
+    .cabecalho {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .cabecalho-menu {
+      flex-direction: column;
+      gap: 10px;
+      text-align: center;
+    }
+  
+    .historiaBarbearia img,
+    .historiaMeioBarbearia img,
+    .historiaHojeBarbearia img {
+      width: 100%;
+      height: auto;
+    }
+  
+    .conteudo-escrito,
+    .conteudo-escrito-meio {
+      padding: 1rem;
+      font-size: 1rem;
+    }
+  
+    iframe {
+      width: 100%;
+      height: 200px;
+    }
+  }
+  
 /* footer{
     font-family: "GrandParadiso-Regular", sans-serif;
     font-weight: 400;
