commit de comentarios não finalizado

--- a/public/assets/css/feedback.css
+++ b/public/assets/css/feedback.css
@@ -1,3 +1,4 @@
+/*Registro de fonte*/
 @font-face {
     font-family: 'GrandParadiso-Regular';
     src: url('fonts/GrandParadiso-Regular.woff') format('truetype');
