--- a/public/assets/css/servicos.css
+++ b/public/assets/css/servicos.css
@@ -1,130 +1,144 @@
 /*Registro de fonte*/
 @font-face {
-    font-family: 'GrandParadiso-Regular';
-    src: url('fonts/GrandParadiso-Regular.woff') format('truetype');
+    font-family: 'GrandParadiso-Regular'; /*Nome da fonte*/
+    src: url('fonts/GrandParadiso-Regular.woff') format('truetype'); /*Link da fonte e seu formato*/
 }
+
+/*Registro de fonte*/
 @font-face {
-    font-family: 'jodie-garland-jodie-garland-regular-400';
-    src: url('fonts/jodie-garland-jodie-garland-regular-400.ttf') format('truetype');
-
+    font-family: 'jodie-garland-jodie-garland-regular-400'; /*Nome da fonte*/
+    src: url('fonts/jodie-garland-jodie-garland-regular-400.ttf') format('truetype'); /*Link da fonte e seu formato*/
 }
+
+/*Modificação em toda a página*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+    margin: 0; /*Margem definida como 0*/
+    padding: 0; /*padding definida como 0*/
+    box-sizing: border-box; /*Ele muda a forma como é calculado o tamanho de um elemento*/
+    text-decoration: none; /*Remove decorações no texto*/
 }
 
+/*Tag body*/
 body {
-
-    background:
-    url('imagens/patternbackground.png') repeat-y,
-     #8d8c8c;
-     background-size: 1600px;
-     background-position: top;
-
+    
+    background: url('imagens/patternbackground.png') repeat-y,#8d8c8c; /*Link do pattern, juntamente com seu eixo e sua cor*/
+    background-size: 1600px; /*Propriedade que define o tamanho da imagem de fundo*/
+    background-position: top; /*Propriedade que define a posição da imagem de fundo*/
 }
+
+/*Tag semântica header*/
 header{
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    font-size: 100%;
-    background-color: darkgray;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    position: fixed; /*Define a posição do header*/
+    width: 100%; /*Largura definida como 100%*/
+    z-index: 1000; /*Define a ordem de empilhamento dos elementos*/
+    font-size: 100%; /*Define o tamanho da fonte*/
+    background-color: darkgray; /*Define a cor do background*/
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /*Aplica um sombreamento nos elementos*/
 }
 
+/*Imagem do header*/
 header img {
-    max-height: 80px;
+    height: 80px; /*Altura definida como 80px*/
 }
 
+/*Classe cabecalho*/
 .cabecalho {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding: 16px;
+    display: flex; /*Define o display como flexível*/
+    flex-direction: row; /*Define a direção dos itens*/
+    align-items: center; /*Define que os itens deve estar no centro*/
+    justify-content: space-around; /*Define o alinhamento dos elementos*/
+    padding: 16px; /*Padding definido como 16px*/
  }
 
+ /*Classe cabecalho-menu*/
 .cabecalho-menu {
-    display: flex;
-    gap: 32px;
+    display: flex; /*Define o display como flexível*/
+    gap: 32px; /*Define os espaçamentos dos itens*/
 }
 
-
+/*Tag a dentro do nav dentro do header*/
 header nav a{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    font-weight: 400;
-    font-size: 28px;
-    color: white;
-    background-color:#6e6e6e;
-    width: 180px;
-    height: 48px;
-    border: none;
-    border-radius: 10px;
-    margin-left: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-family: "GrandParadiso-Regular", sans-serif; /*Define a fonte*/
+    font-weight: 400; /*Define a espessura da fonte*/
+    font-size: 28px; /*Define o tamanho da fonte*/
+    color: white; /*Define a cor*/
+    background-color:#6e6e6e; /*Define a cor do background*/
+    width: 180px; /*Largura definida em 180px*/
+    height: 48px; /*Altura definida em 48px*/
+    border: none; /*Tira as bordas*/
+    border-radius: 10px; /*Arredonda os cantos do elemento*/
+    margin-left: 100px; /*Margem da esquerda definida em 100px*/
+    display: flex; /*Define o display como flexível*/
+    align-items: center; /*Alinha os itens para o centro*/
+    justify-content: center; /*Define o alinhamento dos elementos*/
 }
 
+/*Tag main*/
 main{
-    padding-top: 115px;
-    margin-bottom: 48px;
-    border-top: 0.4px solid #2c2a2a;
+    padding-top: 115px; /*Padding top definido em 155px*/
+    margin-bottom: 48px; /*Margin bottom definido em 48px*/ 
+    border-top: 0.4px solid #2c2a2a; /*Borda superior definida em 0.4px, juntamente com uma borda sólida e sua cor*/
 }
 
+/*Class inicio-servicos*/
 .inicio-servicos {
-    position: relative;
-    width: 100%;
-    height: 560px;
-    overflow: hidden;
+    position: relative; /*Posição definida como relativa*/
+    width: 100%; /*Largura definida em 100%*/
+    height: 560px; /*Altura definida em 560px*/
+    overflow: hidden; /*Esconde elementos */
 }
 
+/*Imagem da class Imagem-fundo*/
 .Imagem-fundo img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
+    position: absolute; /*Posição definida como absoluta*/
+    top: 0; /*Posição do topo definida como 0*/
+    left: 0; /*posição da esquerda definida com 0*/
+    width: 100%; /*Largura definida em 100%*/
+    height: 100%; /*Altura definida como 100%*/
+    object-fit: cover; /*Controla o conteúdo de um elemento substitutível*/
+    z-index: 0; /*Define a ordem de empilhamento dos elementos*/
 }
 
+/*Class imagem-elemento*/
 .imagem-elemento {
-    position: absolute;
-    top: 100px;
-    left: 50px;
-    z-index: 1;
-    width: 150px;
+    position: absolute; /*Posição definida como absoluta*/
+    top: 100px; /*Posição do topo definida em 100px*/
+    left: 50px; /*Posição da esquerda definida em 50px*/
+    z-index: 1; /*Define a ordem de empilhamento dos elementos*/
+    width: 150px; /*Largura definida em 150px*/
 }
 
+/*class imagem-utensilios*/
 .imagem-utensilios {
-    position: absolute;
-    top: 150px;
-    right: 80px;
-    z-index: 1;
-    width: 300px;
-    height: 300px;
+    position: absolute; /*Posição definida como absoluta*/
+    top: 150px; /*Posição do topo definida em 150px*/
+    right: 80px; /*Posição da direita definida em 80px*/
+    z-index: 1; /*Define a ordem de empilhamento dos elementos*/
+    width: 300px; /*Largura definida em 300px*/
+    height: 300px; /*Altura definida em 300px*/
 }
 
+/*class titulo*/
 .titulo {
-    position: absolute;
-    top: 150px;
-    transform: translateX(100%);
-    color: white;
-    text-align: center;
-    z-index: 2;
-}
+    position: absolute; /*Posição absoluta*/
+    top: 150px; /*Posição do topo definida em 150px*/
+    transform: translateX(100%); /*move o elemento para a direita*/
+    color: white; /*Cor definida como branca*/
+    text-align: center; /*Alinha o texto para o centro*/
+    z-index: 2; /*Define a ordem de empilhamento dos elementos*/
+} 
 
+/*h1 na classe titulo*/
 .titulo h1 {
-    font-family: "jodie-garland-jodie-garland-regular-400", sans-serif;
-    font-weight: 400;
-    font-size: 100px;
+    font-family: "jodie-garland-jodie-garland-regular-400", sans-serif; /*Define a fonte*/
+    font-weight: 400; /*Define a espessura em 400*/
+    font-size: 100px; /*Define o tamanho da fonte em 100px*/
 }
 
+/*class servicos*/
 .servicos{
-    display: grid;
-    grid-auto-flow: column;
+    display: grid; /*Display definido para grid*/
+    grid-auto-flow: column; 
     overflow-x: auto;
     overscroll-behavior-x: contain;
     scroll-snap-type: x mandatory;
@@ -140,44 +154,50 @@ main{
     padding-right: 160px;
 }
 
+/*class corte_cabelo*/
 .corte_cabelo{
-    position: relative;
-    width: 350px;
-    height: 500px;
+    position: relative; /*Posição definida como relativa*/
+    width: 350px; /**Largura definida em 350px*/
+    height: 500px; /*Altura definida em 500px*/
 }
 
+/*class corte_barba*/
 .corte_barba{
-    position: relative;
-    width: 350px;
-    height: 500px;
+    position: relative; /*Posição definida como relativa*/
+    width: 350px; /*Largura definida como 350px*/
+    height: 500px; /*Altura definida como 500px*/
 }
 
+/*class quimicas*/
 .quimicas{
-    position: relative;
-    width: 350px;
-    height: 500px;
+    position: relative; /*Posiçaõ definida como relatica*/
+    width: 350px; /*Largura definida como 350px*/
+    height: 500px; /*Altura definida como 500px*/
 }
 
+/*class sombrancelha*/
 .sombrancelha{
-    position: relative;
-    width: 350px;
-    height: 500px;
+    position: relative; /*posição definida como relativa*/
+    width: 350px; /*Largura definida como 350px*/
+    height: 500px; /*Altura definida como 500px*/
 }
 
+/*class logo_white dentro da corte_cabelo dentro da servicos*/
 .servicos .corte_cabelo .logo_white {
-    position: absolute;
-    height: 125px;
-    margin-left: 125px;
-    width: 100px;
-    z-index: 1;
+    position: absolute; /*Posição definida como absoluta*/
+    height: 125px; /*Altura definida como 135px*/
+    margin-left: 125px; /*Margem da esquerda definida em 125px*/
+    width: 100px; /*Largura definida em 100px*/
+    z-index: 1; /*Define a ordem de empilhamento dos elementos*/
 }
 
+/*class servicos dentro da corte_cabelo dentro da pattern*/
 .servicos .corte_cabelo .pattern{
-    position: absolute;
-    margin-left: 100px;
-    height: 500px;
-    width: 350px;
-    border-radius: 20px;
+    position: absolute; /*Posiçaõ absoluta*/
+    margin-left: 100px; /*Margem da direita definida como 100px*/
+    height: 500px; /*Altura definida em 500px*/
+    width: 350px; /*Largura definida em 350px*/
+    border-radius: 20px; 
     z-index: 0;
 }
 
@@ -376,129 +396,170 @@ main{
     color: white;
 }
 
+/*Classe voltar-topo*/
+.voltar-topo {
+    position: fixed; /*Define a posição como fixed*/
+    bottom: 20px; /*Posição inferior definido em 20px*/
+    right: 20px; /*Alinhamento a direita definido em 20px */
+    background-color: rgb(100, 100, 100); /*Define a cor de fundo*/
+    color: white; /*Define a cor oomo branca*/
+    padding: 10px 15px; /*Define o padding em 10px e 15px*/
+    text-decoration: none; /*Remove decorações do texto*/
+    border-radius: 8px; /*Arredonda os cantos do elemento*/
+    font-weight: bold; /*Largura da fonte definida como bold*/
+    transition: background-color 0.3s ease; /*Define uma transição suave quando a cor do background mudar*/
+}
+
+/*Classe voltar-topo com uma propriedade hover (quando passa o mouse em cima ativa ela)*/
+.voltar-topo:hover{
+    background-color: black; /*Define a cor do background*/
+}
+
+/*Tag html*/
+html{
+    scroll-behavior: smooth; /*Faz com que o rolamento seja suave*/
+}
+
+/*Tag footer*/
 footer{
-    width: 100%;
-    color: white;
+    width: 100%; /*Define a largura em 100%*/
+    color: white; /*Define a cor como branca*/
 }
 
+/*Id footer_content*/
 #footer_content{
-    background-color: rgb(73, 73, 73);
-    display: grid;
-    gap: 0.5rem;
-    grid-template-columns: repeat(3,1fr);
-    padding: 3rem 3.5rem
+    background-color: rgb(73, 73, 73); /*Define a cor do background*/
+    display: grid; /*Define o display com grid*/
+    gap: 0.5rem; /*Define os espaçamentos dos itens*/
+    grid-template-columns: repeat(3,1fr); /*Define a estrutura de colunas*/
+    padding: 3rem 3.5rem /*Padding definido em 3rem e 3.5rem*/
 }
+
+/*h1 do Id footer_contatos*/
 #footer_contatos h1{
-    margin-bottom: 2rem;
+    margin-bottom: 2rem; /*Margem de baixo definida em 2rem*/
 }
+
+/*id footer_rede_social*/
 #footer_rede_social{
-    display: flex;
-    gap: 2rem;
-    margin-top: 1.5rem;
+    display: flex; /*Display definido como flexível*/
+    gap: 2rem; /*Define os espaçamentos dos itens*/
+    margin-top: 1.5rem; /*Margem do topo definido como 1.5rem*/
 }
 
+/*Class footer-link do Id footer_rede_social*/
 #footer_rede_social .footer-link{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.5rem;
-    width: 2.5rem;
-    color: aliceblue;
-    border-radius: 50%;
-    transition: all 0.4s;
+    display: flex; /*Display definido como flexível*/
+    align-items: center; /*Alinha os itens no centro*/
+    justify-content: center; /*define o alinhamento dos itens*/
+    height: 2.5rem; /*Altura definida em 2.5rem*/
+    width: 2.5rem; /*Largura definida em 2.5rem*/
+    color: aliceblue; /*Cor definida como aliceblue*/
+    border-radius: 50%; /*Deixa com os cantos arredondados*/
+    transition: all 0.4s; /*transiçaõ de 0.4 segundos*/
 }
+
+/*Class footer-link do Id footer_rede_social*/
 #footer_rede_social .footer-link i{
-    font-size: 1.25rem;
+    font-size: 1.25rem; /*Tamanho da fonte definido em 1.25rem*/
 }
+
+/*Class footer-link:hover do Id footer_rede_social*/
 #footer_rede_social .footer-link:hover{
-    opacity: 0.8;
+    opacity: 0.8; /*Opacidade definida em 0.8*/
 }
+
+/*Id whatsapp*/
 #whatsapp{
-    background-color:#25d366;
+    background-color:#25d366; /*Cor de fundo*/
 }
+
+/*Id Instagram*/
 #instagram{
-    background: linear-gradient(#4B0082,#ff2992,#FF8C00)
+    background: linear-gradient(#4B0082,#ff2992,#FF8C00) /*Cor de fundo com um gradiente*/
 }
+
+/*Id facebook*/
 #facebook{
-    background-color: #4267b3;
+    background-color: #4267b3; /*Cor de fundo*/
 }
+
+/*Id footer_enviar*/
 #footer_enviar{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 500px;
-    gap: 1.5rem;
+    display: flex; /*Display definido como flexível*/
+    align-items: center; /*Alinha os itens para o centro*/
+    flex-direction: column; /*Define a direção dos itens*/
+    width: 500px; /*Largura definida em 500px*/
+    gap: 1.5rem; /*Define os espaçamentos dos itens*/
 }
+
+/*Id input_group*/
 #input_group{
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    background-color: #2c2a2a;
-    border-radius: 4px;
+    display: flex; /*Display definido como flexível*/
+    justify-content: end; /*define o alinhamento dos itens*/
+    align-items: end; /*Alinha os itens para o centro*/
+    background-color: #2c2a2a; /*Cor de fundo*/
+    border-radius: 4px; /*Deixa com os cantos arredondados*/
 }
+
+/*Input de um Id input_group*/
 #input_group input{
-    all: unset;
-    padding: 0.75rem;
-    width: 100%;
+    all: unset; /*Remove todos os estilos aplicados*/
+    padding: 0.75rem; /*Padding definido em 0.75rem*/
+    width: 100%; /*Largura definido em 100%*/
 }
+
+/*button do Id input_group*/
 #input_group button{
-    background-color: rgb(5, 57, 199);
-    border: none;
-    color: aliceblue;
-    padding: 0px 1.25rem;
-    font-size: 1.125rem;
-    height: 100%;
-    border-radius: 0px 4px 4px 0px;
-    cursor: pointer;
-    transition: all 0.4s;
+    background-color: rgb(5, 57, 199); /*Cor de fundo*/
+    border: none; /*borda desativada*/
+    color: aliceblue; /*Cor*/
+    padding: 0px 1.25rem; /*Padding definido como 0px e 1.25rem*/
+    font-size: 1.125rem; /*Tamanho da fonte definido em 1.123rem*/
+    height: 100%; /*Altura definida em 100%*/
+    border-radius: 0px 4px 4px 0px; /*Deixa com os cantos arredondados*/
+    cursor: pointer; /*Muda o cursor do mouse*/
+    transition: all 0.4s; /*Efeito de transição*/
 }
 
+/*button com um hover do Id input_group*/
 #input_group button:hover{
-    opacity: 0.8;
+    opacity: 0.8; /*Opacidade alterada*/
 }
+
+/*Id footer_copyright*/
 #footer_copyright{
-    display: flex;
-    justify-content: center;
-    color: white;
-    background-color: black;
-    font-size: 0.9rem;
-    padding: 0.25rem;
-    font-weight: 100
+    display: flex; /*Display definido como flexível*/
+    justify-content: center; /*define o alinhamento dos itens*/
+    color: white; /*Cor*/
+    background-color: black; /*Cor de fundo*/
+    font-size: 0.9rem; /*Tamanho da fonte definido em 0.9rem*/
+    padding: 0.25rem; /*Padding definido como 0.25rem*/
+    font-weight: 100 /*Define a espessura do elemento*/
 }
 
+/*Id footer_mapa*/
 #footer_mapa {
-    width: 100%;            /* ou algo fixo como 300px */
-    max-width: 300px;       /* controle o tamanho máximo */
-    height: 200px;          /* altura desejada */
-    margin: 0 auto;
-    overflow: hidden;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-#footer_mapa iframe {
-    width: 100%;
-    height: 100%;
-    border: 0;
-  }
-  .voltar-topo {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: rgb(100, 100, 100);
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-  }
+    width: 100%; /*largura definida em 100%*/            
+    max-width: 300px; /*Largura máxima definida em 300px*/      
+    height: 200px; /*Altura máxima definida em 200px*/      
+    margin: 0 auto; /*margem definida automaticamente como 0*/
+    overflow: hidden; /*Esconde parte do elemento*/
+    border-radius: 4px; /*Deixa com os cantos arredondados*/
+    box-sizing: border-box; /*Define o tamanho total do elemento*/
+}
 
-  .voltar-topo:hover {
-    background-color: black;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
+/*iframe da Id footer_mapa*/
+#footer_mapa iframe {
+    width: 100%; /*Largura definida em 100%*/
+    height: 100%; /*Altura definida em 100%*/
+    border: 0; /*Borda definida como 0*/
+}
+
+/*html*/
+html {
+    scroll-behavior: smooth; /*Faz com que o rolamento seja suave*/
+}
 
 /* Novos estilos para a seção de agendamento na página de serviços */
 #agendamento-form-section {
