--- a/public/assets/css/feedback.css
+++ b/public/assets/css/feedback.css
@@ -80,171 +80,197 @@ main{
     border-top: 0.4px solid #2c2a2a; /*Borda superior definida em 0.4px, juntamente com uma borda sólida e sua cor*/
 }
 
+/*Tag a dentro de uma tag nav dentro da classe parte2*/
 .parte2 nav a{
-    margin-left: 250px;
-    text-decoration: none;
-    color: darkblue;
+    margin-left: 250px; /*Margem da esquerda definida em 250px*/
+    text-decoration: none; /*Decorações do texto retiradas*/
+    color: darkblue; /*Cor definida como darkblue*/
 }
 
+/*Tag h1 dentro da classe titulo-feedback dentro da classe feedback*/
 .Feedback .Titulo-Feedback h1{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    background-color: #2c2a2a;
-    border-radius: 10px;
-    margin-left: 600px;
-    margin-right: 600px;
+    font-family: "GrandParadiso-Regular", sans-serif; /*Define a fonte da tag h1*/
+    color: white; /*Cor definida como branca*/
+    display: flex; /*Display definido como flexível*/
+    justify-content: center; /*Alinha os itens no centro do eixo princiapal*/
+    align-items: center; /*Alinha os itens no centro*/
+    margin-top: 50px; /*Margem superior definida em 50px*/
+    background-color: #2c2a2a; /*Cor de fundo definida*/
+    border-radius: 10px; /*Arredondamento das bordas definido em 10px*/
+    margin-left: 600px; /*Margem da esquerda definido em 600px*/
+    margin-right: 600px; /*Margem da direita definido em 600px*/
 }
 
+/*Tag img dentro da classe Imagem-Feedback dentro da classe feedback*/
 .Feedback .Imagem-Feedback img{
-    width: 255px;
-    height: 215px;
-    border-radius: 50%;
-    margin-top: 90px;
-    margin-left: 30px;
-    display: flex;
+    width: 255px; /*Largura definida em 255px*/
+    height: 215px; /*Altura definida em 215px*/
+    border-radius: 50%; /*Arredondamento das bordas definido em 50%*/
+    margin-top: 90px; /*Margem do topo definida em 90px*/
+    margin-left: 30px; /*Margem de esquerda definido em 30px*/
+    display: flex; /*Display definido como flexível*/
 }
 
+/*Tag p dentro da classe imagem-feedback dentro da classe feedback*/
 .Feedback .Imagem-Feedback p{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    margin-left: 10px;
-    font-size: 24px;
+    font-family: "GrandParadiso-Regular", sans-serif; /*Fonte defimida para a tag p*/
+    margin-left: 10px; /*Margem da esquerda definida em 10px*/
+    font-size: 24px; /*Tamanho da fonte definido em 24px*/
 }
 
+/*Classe Bloco_1*/
 .Bloco_1 {
-    display: flex;
+    display: flex; /*Display definido como flexível*/
 }
 
+/*Classe Bloco_2*/
 .Bloco_2 {
-    display: flex;
+    display: flex; /*Display definido como flexível*/
 }
 
+/*Classe Bloco_3*/
 .Bloco_3 {
-    display: flex;
+    display: flex; /*Display definido como flexível*/
 }
 
+/*Classe star-rating dentro da classe star_1*/
 .star_1 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Classe star-rating dentro da classe star_2*/
 .star_2 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Classe star-rating dentro da classe star_3*/
 .star_3 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Classe star-rating dentro da classe star_4*/
 .star_4 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Classe star-rating dentro da classe star_5*/
 .star_5 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Classe star-rating dentro da classe star_6*/
 .star_6 .star-rating{
-    margin-top: 15px;
-    margin-left: 150px;
+    margin-top: 15px; /*Margem superior definida em 15px*/
+    margin-left: 150px; /*Margem da esquerda definida em 150px*/
 }
 
+/*Tag h1 dentro da classe div_formulario*/
 .div_formulario h1{
-    font-family: "GrandParadiso-Regular", sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 150px;
-    background-color: #2c2a2a;
-    border-radius: 10px;
-    margin-left: 500px;
-    margin-right: 500px;
+    font-family: "GrandParadiso-Regular", sans-serif; /*Fonte definida para a tag h1*/
+    color: white; /*Cor definida como branca*/
+    display: flex; /*Display definido como flexível*/
+    justify-content: center; /*Alinha os itens no centro do eixo principal*/
+    align-items: center; /*Alinha os itens no centro*/
+    margin-top: 150px; /*Margem superior definida em 150px*/
+    background-color: #2c2a2a; /*Cor de fundo*/
+    border-radius: 10px; /*Arredondamento das bordas definido em 10px*/
+    margin-left: 500px; /*Margem da esquerda definida em 500px*/
+    margin-right: 500px; /*Margem da direita definida em 500px*/
 }
 
+/*Classe box_avaliacao*/
 .box_avaliacao{
-    display: flex;
-    padding-top: 75px;
-    padding-bottom: 150px;
+    display: flex; /*Display definido como flexível*/
+    padding-top: 75px; /*Padding superior definido em 75px*/
+    padding-bottom: 150px; /*Padding inferior definido em 150px*/
 }
 
+/*Imagem dentro de uma classe box_avaliacao*/
 .box_avaliacao img{
-    height: 350px;
-    width: 450px;
-    margin-top: 80px;
-    margin-left: 150px;
-    border: 2px solid darkgray;
+    height: 350px; /*Altura definida em 350px*/
+    width: 450px; /*Largura definida em 450px*/
+    margin-top: 80px; /*Margem superior definida em 80px*/
+    margin-left: 150px; /*Margem a esquerda definida em 150px*/
+    border: 2px solid darkgray; /*Cor da borda definida, juntamente com seu tipo e sua espessura*/
 }
 
+/*Classe box_nome*/
 .box_nome{
-    margin-left: 300px;
-    margin-top: 65px;
+    margin-left: 300px; /*Margem a esquerda definida em 300px*/
+    margin-top: 65px; /*Margem superior definida em 65px*/
 }
 
+/*Label dentro da classe box_nome dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_nome label{
-    font-size: 30px;
+    font-size: 30px; /*Tamanho da fonte definido em 30px*/
 }
 
+/*Input dentro da classe box_nome dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_nome input{
-    height: 30px;
-    width: 500px;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: rgb(220, 220, 220);
-    font-size: 20px;
+    height: 30px; /*Altura definida em 30px*/
+    width: 500px; /*Largura definida em 500px*/
+    border: 2px solid black; /*Cor da borda definida, juntamente com sua espessura e tipo*/
+    border-radius: 10px; /*Espessura da borda definida em 10px*/
+    background-color: rgb(220, 220, 220); /*Cor de fundo*/
+    font-size: 20px; /*Tamanho da fonte definido em 20px*/
 }
 
+/*Modificação do placeholder do Input que está dentro da classe box_nome dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_nome input::placeholder{
-    position: relative;
-    top: 1px;
-    padding-left: 5px;
-    font-size: 20px;
+    position: relative; /*Posição definida como relativa*/
+    top: 1px; /*Posiciona o elemento verticalmente para baixo*/
+    padding-left: 5px; /*Padding da esquerda definido em 5px*/
+    font-size: 20px; /*Tamanho da fonte definido em 20px*/
 }
 
+/*Classe box_questionario*/
 .box_questionario{
-    margin-left: 300px;
+    margin-left: 300px; /*Margem da esquerda definido em 300px*/
 }
 
+/*Label dentro da classe box_questionario dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_questionario label{
-    font-size: 30px;
+    font-size: 30px; /*Tamanho da fonte definido em 30px*/
 }
 
+/*Textarea dentro da classe box_questionario dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_questionario textarea{
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    border: 2px solid black;
-    height: 200px;
-    width: 500px;
-    border-radius: 10px;
-    background-color: rgb(220, 220, 220);
+    display: flex; /*Display definido como flexível*/
+    justify-content: center; /*Centraliza os elementos*/
+    font-size: 20px; /*Tamanho da fonte*/
+    border: 2px solid black; /*Cor da borda definida juntamente com a sua espessura e tipo*/
+    height: 200px; /*Altura definida em 200px*/
+    width: 500px; /*Largura definida em 500px*/
+    border-radius: 10px; /*Arredonda os cantos do elemento em 10px*/
+    background-color: rgb(220, 220, 220); /*Cor de fundo*/
 
 }
 
+/*Modificação mo placeholder do textarea que está dentro da classe box_questionario dentro da classe box_formulario dentro da classe box_avaliacao*/
 .box_avaliacao .box_formulario .box_questionario textarea::placeholder{
-    position: relative;
-    padding-left: 5px;
-    font-size: 20px;
+    position: relative; /*Posição definida como relativa*/
+    padding-left: 5px; /*Padding da esquerda definido em 5px*/
+    font-size: 20px; /*Tamanho da fonte*/
 }
 
-.box_avaliacao button{
-    margin-left: 300px;
-    font-size: 15px;
-    padding: 12px 32px;
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: rgb(220, 220, 220);
+/*Botão da classe box_avaliacao*/
+.box_avaliacao button{ 
+    margin-left: 300px; /*Margem da esquerda definido em 300px*/
+    font-size: 15px; /*Tamanho da fonte definido em 15px*/
+    padding: 12px 32px; /*Padding definido em 12px e 32px*/
+    border: 2px solid black; /*Cor da borda definido, juntamente com sua espessura e tipo*/
+    border-radius: 10px; /*Arredondamento das bordas definido em 10px*/
+    background-color: rgb(220, 220, 220); /*Cor de fundo*/
 }
 
+/*Botão com uma propriedade hover dentro da classe box_avaliacao*/
 .box_avaliacao button:hover{
-    background-color: #2c2a2a;
+    background-color: #2c2a2a; /*Cor de fundo*/
     color: white; /*Cor*/
 }
 
